Fixed some known issues

--- a/zh/contact/index.html
+++ b/zh/contact/index.html
@@ -6,12 +6,7 @@
 <span id=person-telephone><span id=tel-2c03b42ea856331799e3b0d51ea2319c class=phone-reveal data-number=+86-029-82664764><span class=phone-label>Phone:</span>
 <a href=# class=js-reveal-phone>(click to reveal)</a><noscript>Phone: +86-029-82664764</noscript><script>(function(){var e,t=document.getElementById("tel-2c03b42ea856331799e3b0d51ea2319c");if(!t)return;if(e=t.querySelector(".js-reveal-phone"),!e)return;e.addEventListener("click",function(n){n.preventDefault();var o=t.getAttribute("data-number")||"",s=document.createElement("a");s.href="tel:"+o.replace(/\s+/g,""),s.textContent=o,s.rel="nofollow",s.className=e.className,t.replaceChild(s,e)})})()</script></span></span></li><li><i class="fa-li fas fa-map-marker fa-2x" aria-hidden=true></i>
 <span id=person-address>咸宁西路28号, 西安市, 陕西省 710049</span></li><li><i class="fa-li fas fa-compass fa-2x" aria-hidden=true></i>
-<span>兴庆校区 仲英楼 A205</span></li></ul><div class=d-none><input id=map-provider value=mapnik>
-<input id=map-lat value=34.249175>
-<input id=map-lng value=108.975554>
-<input id=map-dir value="咸宁西路28号, 西安市, 陕西省 710049">
-<input id=map-zoom value=15>
-<input id=map-api-key value></div><div id=map></div></div></div></div></section></div><div class=page-footer><div class=container><footer class=site-footer><p class=powered-by>由<a href="https://hugoblox.com/?utm_campaign=poweredby" target=_blank rel=noopener>Hugo Blox Builder</a>支持发布——免费<a href=https://github.com/HugoBlox/hugo-blox-builder target=_blank rel=noopener>开源</a>网站，为创作者赋能。</p></footer></div></div><script src=https://jdmse.github.io/js/vendor-bundle.min.50933d940896e49f984a778650d5f7f5.js></script><script src=https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.min.js integrity crossorigin=anonymous></script><script id=search-hit-fuse-template type=text/x-template>
+<span>兴庆校区 仲英楼 A205</span></li></ul></div></div></div></section></div><div class=page-footer><div class=container><footer class=site-footer><p class=powered-by>由<a href="https://hugoblox.com/?utm_campaign=poweredby" target=_blank rel=noopener>Hugo Blox Builder</a>支持发布——免费<a href=https://github.com/HugoBlox/hugo-blox-builder target=_blank rel=noopener>开源</a>网站，为创作者赋能。</p></footer></div></div><script src=https://jdmse.github.io/js/vendor-bundle.min.50933d940896e49f984a778650d5f7f5.js></script><script src=https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.min.js integrity crossorigin=anonymous></script><script id=search-hit-fuse-template type=text/x-template>
     <div class="search-hit" id="summary-{{key}}">
       <div class="search-hit-content">
         <div class="search-hit-name">
